--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,28 +10,28 @@
     </div>
   <% end %>
 
-  <div class="text-white text-opacity-75">
+  <div class="text-opacity-75">
     <div class="mb-4">
-      <%= form.label :name, class: "block text-sm font-medium text-gray-700" %>
-      <%= form.text_field :name, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300" %>
+      <%= form.label :name, class: "text-white block text-sm font-medium text-gray-700" %>
+      <%= form.text_field :name, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300", style: "background-color: rgba(255, 255, 255, 0.5);" %>
     </div>
 
     <div class="mb-4">
-      <%= form.label :location, class: "block text-sm font-medium text-gray-700" %>
-      <%= form.text_field :location, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300" %>
+      <%= form.label :location, class: "text-white block text-sm font-medium text-gray-700" %>
+      <%= form.text_field :location, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300", style: "background-color: rgba(255, 255, 255, 0.5);" %>
     </div>
 
     <div class="mb-4">
-      <%= form.label :date, class: "block text-sm font-medium text-gray-700" %>
-      <%= form.date_field :date, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300" %>
+      <%= form.label :date, class: "text-white block text-sm font-medium text-gray-700" %>
+      <%= form.date_field :date, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300", style: "background-color: rgba(255, 255, 255, 0.5);" %>
     </div>
 
     <div class="mb-4">
-      <%= form.label :event_image_url, "Event Image URL", class: "block text-sm font-medium text-gray-700" %>
-      <%= form.text_field :event_image_url, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300" %>
+      <%= form.label :event_image_url, "Event Image URL", class: "text-white block text-sm font-medium text-gray-700" %>
+      <%= form.text_field :event_image_url, class: "mt-1 block w-full border border-gray-400 rounded-md shadow-sm p-2 focus:border-blue-500 focus:ring-2 focus:ring-blue-300", style: "background-color: rgba(255, 255, 255, 0.5);" %>
     </div>
   </div>
-
+  <br>
   <div class="inline">
     <%= form.submit class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
   </div>
