--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Editing event" %>
 
 <div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing event</h1>
+  <h1 class="font-bold text-white text-4xl">Editing event</h1>
 
   <%= render "form", event: @event %>
 
