--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,5 +1,14 @@
 <div class="text-white">
-  <h2><%= @event.name %></h2>
-  <p><%= @event.location %></p>
-  <p><%= @event.date %></p>
+    <h2><%= @event.name %></h2>
+    <p><%= @event.location %></p>
+    <p><%= @event.date %></p>
+
+    <% @event.tickets.each do |ticket| %>
+    <div class="">
+        <p><%= ticket.category %> - <%= ticket.price %></p>
+        <%= button_to "Add to Cart", line_items_path(ticket_id: ticket.id), method: :post, class: "rounded-md px-5 py-2 text-white bg-blue-600 hover:bg-blue-500 font-medium cursor-pointer" %>
+        <br>
+    </div>
+    <% end %>
+
 </div>
