--- a/app/views/line_items/new.html.erb
+++ b/app/views/line_items/new.html.erb
@@ -1,9 +1,10 @@
 <% content_for :title, "New line item" %>
 
 <div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New line item</h1>
+  <h1 class="font-bold text-white text-4xl">New line item</h1>
 
-  <%= render "form", line_item: @line_item %>
+ <%= render "form", line_item: @line_item %> 
 
-  <%= link_to "Back to line items", line_items_path, class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+
+  <%= link_to "Back to events", events_path, class: "text-black ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
