Basic error handling to prevent RecordNotFound error

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,11 +9,12 @@
                     <th class="text-left py-3 px-4 font-semibold">Category</th>
                     <th class="text-center py-3 px-4 font-semibold">Quantity</th>
                     <th class="text-right py-3 px-4 font-semibold">Price</th>
+                    <th class="text-right py-3 px-4 font-semibold">Remove</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td colspan="4">
+                    <td colspan="5">
                         <hr>
                     </td>
                 </tr>
@@ -28,7 +29,7 @@
                         <%= line_item.ticket.category %>
                     </td>
                     <td class="text-center py-3 px-4 text-gray-300 text-sm">
-                        <%= line_item.quantity %>
+                        <%= line_item.quantity %> &times;
                     </td>
                     <td class="text-right py-3 px-4 text-green-400 font-semibold">
                         $<%= sprintf('%.2f', line_item.total_price) %>
