--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
     <nav>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
-                <%= link_to "F1 Ticketing", home_index_path, class: "text-white text-xl font-bold" %>
+                <div class="flex-shrink-0">
+                    <%= link_to "F1 Ticketing", home_index_path, class: "text-white text-xl font-bold" %>
+                </div>
 
                 <div class="hidden text-white md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
