Unlink line items from cart and associate them with order after confirmation

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -48,6 +48,6 @@
     </div>
 
     <a href="<%= new_order_path %>" class="block mt-6 text-center bg-white font-semibold py-2.5 px-4 rounded-md">
-        Proceed to Checkout
+        Checkout
     </a> 
 </div>
