--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -24,6 +24,6 @@
 
     <br>
     <div>
-        <%= form.submit "Save Order", class: "bg-white font-semibold py-2 px-4 rounded-md" %>
+        <%= form.submit "Make payment", class: "bg-white font-semibold py-2 px-4 rounded-md" %>
     </div>
 <% end %>
