Fake payment service implemented

--- a/app/views/orders/_cc.html.erb
+++ b/app/views/orders/_cc.html.erb
@@ -7,4 +7,10 @@
     <%= form.label :expiration_date, class: "block text-sm font-medium text-white" %>
     <%= form.text_field :expiration_date, class: "mt-1 block w-full rounded-md focus:ring-indigo-500 focus:border-indigo-500", size: 9, placeholder: "e.g. 03/22" %>
   </div>
+
+  <div class="mb-4">
+    <%= form.label :cvv, class: "block text-sm font-medium text-white" %>
+    <%= form.number_field :cvv, class: "mt-1 block w-full rounded-md focus:ring-indigo-500 focus:border-indigo-500", size: 3, maxlength: 3, placeholder: "123" %>
+  </div>
+
 </fieldset>
