Created active job to run fakepay api and order mailer in the background

--- a/app/views/orders/_paypal.html.erb
+++ b/app/views/orders/_paypal.html.erb
@@ -1,6 +1,6 @@
-<div data-payment-target="additionalFields" data-type="Paypal" hidden class="mb-4 p-4">
+<fieldset data-payment-target="additionalFields" data-type="Paypal" class="mb-4 p-4">
     <div class="mb-4">
         <%= form.label :wallet_no, class: "block text-sm font-medium text-white" %>
         <%= form.text_field :wallet_no, class: "mt-1 block w-full border-gray-700 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm bg-gray-700" %>
     </div>
-</div>
+</fieldset>
